# ai-workflow-kit

./: README.md  pyproject.toml
src/workflow_cli/: __init__.py  cli.py
src/workflow_cli/templates/.claude/commands/: execute-parallel-experiments.md  prep-parallel-experiments.md  prime.md
src/workflow_cli/templates/experiments/: README.md
src/workflow_cli/templates/experiments/template/: .env.example  Dockerfile  PLAN.md  docker-compose.yml  requirements.txt  run.py
