[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workflow-kit"
version = "0.1.0"
description = "AI workflow toolkit for setting up Claude Code commands, experiments, and spec-kit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
workflow = "workflow_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_cli"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
